# Plant-Disease-Classification

./: .pdm-python  Crop_Disease_Classification.ipynb  README.md  app.py  pyproject.toml
data/: class_names.json
encoders/: index_to_label.json  label_to_index.json
metadata/: filtered_class_names.json  filtered_class_stats.csv
models/: cnn_base_best.keras
splits/: test.csv  test_encoded.csv  train.csv  train_encoded.csv  val.csv  val_encoded.csv
