[project]
name = "klasifikasi-penyakit-tanaman"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dimas Arief Wicaksono", email = "dimasarifw4@gmail.com"},
]
dependencies = ["streamlit==1.37.0", "tensorflow>=2.20.0", "scikit-learn>=1.7.2", "joblib>=1.5.3", "seaborn>=0.13.2", "matplotlib>=3.10.8"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
